# mario

./: .gitignore  CMakeLists.txt  README.md  engine.cpp  engine.h  logger.h  main.cpp  premake5.lua
.github/workflows/: cmake-multi-platform.yml
src/: engine.cpp  engine.h  logger.h  main.cpp  object.cpp  object.h
src/debuggui/: debuggui.cpp  debuggui.h
src/texture/: texture.cpp  texture.h
toolchains/: mingw.cmake
